--- a/package.json
+++ b/package.json
@@ -41,9 +41,15 @@
     "@socket.io/cluster-adapter": "^0.2.2",
     "@socket.io/redis-adapter": "^8.3.0",
     "@socket.io/sticky": "^1.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "axios": "^1.7.7",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.0",
     "socketio-sticky-session": "^0.4.3",
     "sticky-session": "^0.1.0",
